--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <img class="img-fluid mb-5 d-block mx-auto" src="img/ciphs.png" alt="CIPHS.ORG">             
+            <img class="img-fluid mb-5 d-block mx-auto" src="img/ciphs.png" alt="CIPHS.ORG">
+            
              <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Starting with CIPHS is simple. It's a Cryptocurrency with governance by Community Smart Contract. These ensured CIPHS flexibility and provide it's User the best Cryptocurrency experience ever..   </p>
+            <p class="text-faded mb-5">Cryptocurrency IntelPayment HyperSystem</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -73,10 +74,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">Introductions to CIPHS</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded mb-4">Starting with CIPHS is simple. It's a Cryptocurrency with governance by Community Smart Contract. These ensured CIPHS security and provide best global Cryptocurrency experience ever!</p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Explain CIPHS</a>
           </div>
         </div>
       </div>
@@ -86,7 +87,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">CONTRACT ADDRESS</h2>            
+            <p><a href="https://etherscan.io/address/0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e">0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e</a></p>
             <hr class="my-4">
           </div>
         </div>
@@ -96,22 +98,22 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <h3 class="mb-3">Symbol</h3>
+              <p class="text-muted mb-0">CIPHS</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <h3 class="mb-3">Total Supply</h3>
+              <p class="text-muted mb-0">7million</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <h3 class="mb-3">Max Supply</h3>
+              <p class="text-muted mb-0">86quadrillion</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
