--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <h3 class="mb-3">Decimals</h3>
+              <p class="text-muted mb-0">18</p>
             </div>
           </div>
         </div>
