--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Decimals</h3>
-              <p class="text-muted mb-0">18</p>
+              <p class="text-muted mb-0">18 digit</p>
             </div>
           </div>
         </div>
