--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-info-circle text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-copyright text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Symbol</h3>
               <p class="text-muted mb-0">CIPHS</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-exchange text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Total Supply</h3>
               <p class="text-muted mb-0">7million</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-battery-full text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Max Supply</h3>
               <p class="text-muted mb-0">86quadrillion</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-terminal text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Decimals</h3>
               <p class="text-muted mb-0">18 digit</p>
             </div>
