--- a/index.html
+++ b/index.html
@@ -98,29 +98,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-copyright text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Symbol</h3>
-              <p class="text-muted mb-0">CIPHS</p>
+              <h3 class="mb-3">CIPHS</h3>
+              <p class="text-muted mb-0">Symbol</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-connectdevelop text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Total Supply</h3>
-              <p class="text-muted mb-0">7million</p>
+              <h3 class="mb-3">7 Million</h3>
+              <p class="text-muted mb-0">Total Supply</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-exchange text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Max Supply</h3>
-              <p class="text-muted mb-0">86quadrillion</p>
+              <h3 class="mb-3">86 Quadrillion</h3>
+              <p class="text-muted mb-0">Max Supply</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-superscript text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Decimals</h3>
-              <p class="text-muted mb-0">18 digit</p>
+              <h3 class="mb-3">18 Digit</h3>
+              <p class="text-muted mb-0">Decimals</p>
             </div>
           </div>
         </div>
