--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Introductions to CIPHS</h2>
+            <h2 class="section-heading text-white">Greetings Ciphser!</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Starting with CIPHS is simple. It's a Cryptocurrency with governance by Community Smart Contract. These ensured CIPHS security and provide best global Cryptocurrency experience ever!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Explain CIPHS</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Discover CIPHS©</a>
           </div>
         </div>
       </div>
