--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
              <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Cryptocurrency IntelPayment HyperSystem</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+             <h2 class="section-heading text-white">Cryptocurrency IntelPayment HyperSystem</h2>
+            <p class="text-faded mb-5">DIGITAL P2P CASH CURRENCY</p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Let's Get Started!</a>
           </div>
         </div>
       </div>
@@ -74,9 +75,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Greetings Ciphser!</h2>
+            <h2 class="section-heading text-white">Currency are Community</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Starting with CIPHS is simple. It's a Cryptocurrency with governance by Community Smart Contract. These ensured CIPHS security and provide best global Cryptocurrency experience ever!</p>
+            <p class="text-faded mb-4">Starting with CIPHS is simple. It's a Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss to the Community that use it thus declining the price to increase in value within global market, resulting poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Discover CIPHS©</a>
           </div>
         </div>
