--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-lg-8 mx-auto">
              <h2 class="section-heading text-white">Cryptocurrency IntelPayment HyperSystem</h2>
             <p class="text-faded mb-5">DIGITAL P2P CASH CURRENCY</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Let's Get Started!</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Explore!</a>
           </div>
         </div>
       </div>
@@ -75,9 +75,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Currency are Community</h2>
+            <h2 class="section-heading text-white">Currency needs Community</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Starting with CIPHS is simple. It's a Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss to the Community that use it thus declining the price to increase in value within global market, resulting poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
+            <p class="text-faded mb-4">Starting with CIPHS is simple. CIPHS, a Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss and unfair profit to the Community that use it, resulting of poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Discover CIPHS©</a>
           </div>
         </div>
@@ -107,7 +107,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-connectdevelop text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">7 Million</h3>
-              <p class="text-muted mb-0">Total Supply</p>
+              <p class="text-muted mb-0"Initial Supply</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -122,6 +122,27 @@
               <i class="fa fa-4x fa-superscript text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">18 Digit</h3>
               <p class="text-muted mb-0">Decimals</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-balance-scale text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Vote for Supply</h3>
+              <p class="text-muted mb-0">Meritocracy Minter</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-free-code-camp text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Sign or Verify</h3>
+              <p class="text-muted mb-0">Burnable</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-github-alt text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Source Code</h3>
+              <p class="text-muted mb-0">Open Source</p>
             </div>
           </div>
         </div>
