--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-connectdevelop text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">7 Million</h3>
-              <p class="text-muted mb-0"Initial Supply</p>
+              <p class="text-muted mb-0">Initial Supply</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -126,9 +126,9 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-balance-scale text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Vote for Supply</h3>
-              <p class="text-muted mb-0">Meritocracy Minter</p>
+              <i class="fa fa-4x fa-thumbs-up text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Supply by Votes</h3>
+              <p class="text-muted mb-0">Central Minter</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -140,9 +140,16 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-code-fork text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">DApps Integration</h3>
+              <p class="text-muted mb-0">Trackable</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-github-alt text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Source Code</h3>
-              <p class="text-muted mb-0">Open Source</p>
+              <h3 class="mb-3">Open Source</h3>
+              <p class="text-muted mb-0">Source Code</p>
             </div>
           </div>
         </div>
