--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-github-alt text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Open Source</h3>
+              <h3 class="mb-3"><a href="https://github.com/ciphs">Open Source</a></h3>
               <p class="text-muted mb-0">Source Code</p>
             </div>
           </div>
