--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-github-alt text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Open Source</h3>
-              <p class="text-muted mb-0">Source Code<a href="https://github.com/ciphs">GitHub</a></p>
+              <p class="text-muted mb-0"><a href="https://github.com/ciphs">GitHub</a></p>
             </div>
           </div>
         </div>
