--- a/index.html
+++ b/index.html
@@ -203,81 +203,48 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
+          </div>                          
         </div>
       </div>
     </section>
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Whitepaper: 1st Proposal</h2>
+        <a class="btn btn-light btn-xl sr-button" href="https://github.com/ciphs/cryptocurrency/blob/master/README.proposal.md_blank">Read Here</a>
       </div>
     </section>
-
+   
     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">COMMUNITY SUPPORT</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Stay connected within CIPHS Community wherever you are.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <i class="fa fa-telegram fa-3x mb-3 sr-contact"></i>
+            <p class="text-muted mb-0"><a href="https://t.me/ciphshq">NEWSChannel</a></p>
+          </div>
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-telegram fa-3x mb-3 sr-contact"></i>
+            <p class="text-muted mb-0"><a href="https://t.me/ciphschat">CHATGroup</a></p>
+          </div>
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-gitter fa-3x mb-3 sr-contact"></i>
+            <p class="text-muted mb-0"><a href="https://gitter.im/ciphs/Lobby">DEVChat</a></p>
+          </div>
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-reddit fa-3x mb-3 sr-contact"></i>
+            <p class="text-muted mb-0"><a href="https://www.reddit.com/u/ciphs">u/CIPHS</a></p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="mailto:0x0@ciphs.org">CIPHS.ORG</a>
             </p>
           </div>
         </div>
