--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Whitepaper: 1st Proposal</h2>
+         <p class="mb-5">CIPHS were developed in the concept of Transparency, Equality, Stability, Community & Meritocracy.</p>
         <a class="btn btn-light btn-xl sr-button" href="https://github.com/ciphs/cryptocurrency/blob/master/README.proposal.md_blank">Read Here</a>
       </div>
     </section>
@@ -234,7 +235,7 @@
             <p class="text-muted mb-0"><a href="https://t.me/ciphschat">CHATGroup</a></p>
           </div>
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-gitter fa-3x mb-3 sr-contact"></i>
+            <i class="fa fa-comments fa-3x mb-3 sr-contact"></i>
             <p class="text-muted mb-0"><a href="https://gitter.im/ciphs/Lobby">DEVChat</a></p>
           </div>
           <div class="col-lg-4 ml-auto text-center">
