--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#contract">Contract</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#exchange">Exchange</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -84,7 +84,7 @@
       </div>
     </section>
 
-    <section id="services">
+    <section id="contract">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -156,7 +156,7 @@
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+    <section class="p-0" id="exchange">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -165,10 +165,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    EtherDelta
                   </div>
                   <div class="project-name">
-                    Project Name
+                    CIPHS/ETH
                   </div>
                 </div>
               </div>
