--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="container text-center">
         <h2 class="mb-4">Whitepaper: 1st Proposal</h2>
          <p class="mb-5">CIPHS were developed in the concept of Transparency, Equality, Stability, Community & Meritocracy.</p>
-        <a class="btn btn-light btn-xl sr-button" href="https://github.com/ciphs/cryptocurrency/blob/master/README.proposal.md_blank">Read Here</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://github.com/ciphs/cryptocurrency/blob/master/README.proposal.md">Read Here</a>
       </div>
     </section>
    
