--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Currency needs Community</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Starting with CIPHS is simple. CIPHS, a Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss and unfair profit to the Community that use it, resulting of poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Discover CIPHS©</a>
+            <p class="text-faded mb-4">Starting with CIPHS is simple. A Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss and unfair profit to the Community that use it, resulting of poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Discover CIPHS©</a>
           </div>
         </div>
       </div>
@@ -213,6 +213,19 @@
         <h2 class="mb-4">Whitepaper: 1st Proposal</h2>
          <p class="mb-5">CIPHS were developed in the concept of Transparency, Equality, Stability, Community & Meritocracy.</p>
         <a class="btn btn-light btn-xl sr-button" href="https://github.com/ciphs/cryptocurrency/blob/master/README.proposal.md">Read Here</a>
+      </div>
+    </section>
+    
+     <section class="bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">Getting CIPHS is Super Easy</h2>
+            <hr class="light my-4">
+            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate, not market price. As in return, Investor will receive more CIPHS in event of succesful total supply increment proposal as a method of distribution into circulation. </p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
+          </div>
+        </div>
       </div>
     </section>
    
