--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#exchange">Exchange</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#investment">Investor</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -216,7 +219,7 @@
       </div>
     </section>
     
-     <section class="bg-primary" id="about">
+     <section class="bg-primary" id="investment">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
