--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Getting CIPHS is Super Easy</h2>
+            <h2 class="section-heading text-white">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate, not market price. As in return, Investor will receive more CIPHS in event of succesful total supply increment proposal as a method of distribution into circulation. </p>
+            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate, not market price. As in return, Investor will receive more CIPHS upon succesful increment proposal of total supply as a method of distribution into circulation.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
           </div>
         </div>
