--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Currency needs Community</h2>
+            <h2 class="section-heading text-white">CIPHS© Community</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Starting with CIPHS is simple. A Cryptocurrency with governance by it's Community powered by Ethereum Smart Contract. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, however it is not limited to it. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss and unfair profit to the Community that use it, resulting of poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Discover CIPHS©</a>
@@ -261,7 +261,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:0x0@ciphs.org">CIPHS.ORG</a>
+              <a href="mailto:admin@ciphs.org">CIPHS.ORG</a>
             </p>
           </div>
         </div>
