--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-thumbs-up text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-suitcase text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3"><a href="https://github.com/ciphs/cryptocurrency/blob/master/LICENSE">MIT</a></h3>
               <p class="text-muted mb-0">License</p>
             </div>
