--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-ethereum text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-code text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">ERC20/223</h3>
               <p class="text-muted mb-0">Ethereum Based</p>
             </div>
