--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
      <section class="bg-dark text-white" id="wallet">
       <div class="container text-center">
         <h2 class="mb-4">Supported Wallet</h2>
-         <p class="mb-5">This is non official CIPHS wallet, but were succesfully tested with CIPHS. Any wallet compatible with erc20 token may be use to store and use CIPHS. However, CIPHS is still in early days, some wallet will need to manually add the contract address and paste ABI code obtain from <a href="https://etherscan.io/address/0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e">0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e</a>Please take note that CIPHS will not held responsible on any issue regarding 3rd party wallet. To name a few:</p>
+         <p class="mb-5">This is non official CIPHS wallet, but were succesfully tested with CIPHS. Any wallet compatible with erc20 token may be use to store and use CIPHS. However, CIPHS is still in early days, some wallet will need to manually add the contract address and paste ABI code obtain from <a href="https://etherscan.io/address/0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e">0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e</a>. Please be aware, that CIPHS will not held responsible on any issue regarding 3rd party wallet. To name a few:</p>
+        <hr>
         <h4 class="mb-4">PC Desktop</h4>
         <a class="btn btn-light btn-xl sr-button" href="https://metamask.io/">Metamask + MEW</a>
          <hr>
