--- a/index.html
+++ b/index.html
@@ -123,14 +123,7 @@
               <h3 class="mb-3">ERC20/223</h3>
               <p class="text-muted mb-0">Ethereum Based</p>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-suitcase text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3"><a href="https://github.com/ciphs/cryptocurrency/blob/master/LICENSE">MIT</a></h3>
-              <p class="text-muted mb-0">License</p>
-            </div>
-          </div>
+          </div>         
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-exchange text-primary mb-3 sr-icons"></i>
@@ -175,6 +168,13 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-suitcase text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">MIT</h3>
+              <p class="text-muted mb-0"><a href="https://github.com/ciphs/cryptocurrency/blob/master/LICENSE">License</a></p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-github-alt text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Open Source</h3>
               <p class="text-muted mb-0"><a href="https://github.com/ciphs">GitHub</a></p>
@@ -195,7 +195,8 @@
         <h4 class="mb-4">Mobile</h4>
         <a class="btn btn-light btn-xl sr-button" href="https://eidoo.io/app/">Eidoo*</a>
         <a class="btn btn-light btn-xl sr-button" href="https://play.google.com/store/apps/details?id=org.vikulin.etherwallet&hl=en&referrer=utm_source%3Dgoogle%26utm_medium%3Dorganic%26utm_term%3Detherwallet+android&pcampaignid=APPU_1_Wy1zWuSAAcSx0ATkh4u4BA">EtherWallet*</a>
-         <a class="btn btn-light btn-xl sr-button" href="https://coinomi.com/">Coinomi</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://coinomi.com/">Coinomi</a>
+        <p class="text-faded mb-4">*Recommended</p>
       </div>
     </section>
     
@@ -205,7 +206,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate, not market price. As in return, Investor will receive more CIPHS upon succesful increment proposal of total supply as a method of distribution into circulation.</p>
+            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation. (Do not send Ether from exchange wallet, you have been warned)</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
           </div>
         </div>
