--- a/index.html
+++ b/index.html
@@ -151,7 +151,21 @@
               <h3 class="mb-3">Supply by Votes</h3>
               <p class="text-muted mb-0">Central Minter</p>
             </div>
-          </div>          
+          </div>
+            <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-star-half text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">1 Address 1 Vote</h3>
+              <p class="text-muted mb-0">Meritocracy Equality</p>
+            </div>
+          </div>
+           <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-shield text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Secured Ecosystem</h3>
+              <p class="text-muted mb-0">Meritocracy Governance</p>
+            </div>
+          </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-free-code-camp text-primary mb-3 sr-icons"></i>
@@ -162,17 +176,10 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-code-fork text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">DApps Integration</h3>
+              <h3 class="mb-3">Future DApps Integration</h3>
               <p class="text-muted mb-0">Programmable</p>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-shield text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ecosystem Security</h3>
-              <p class="text-muted mb-0">Meritocracy Banning</p>
-            </div>
-          </div>
+          </div>                
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-suitcase text-primary mb-3 sr-icons"></i>
