--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
     <section class="p-0" id="exchange">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
+          <h2 class="section-heading text-white">Market Exchange</h2>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
@@ -251,10 +252,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                   DDEX
                   </div>
                   <div class="project-name">
-                    Project Name
+                    COMING SOON
                   </div>
                 </div>
               </div>
@@ -266,10 +267,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    HitBTC
                   </div>
                   <div class="project-name">
-                    Project Name
+                    COMING SOON
                   </div>
                 </div>
               </div>
