--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     
     <section class="p-0" id="exchange">
       <div class="container-fluid p-0">
-       <h2 class="section-heading text-white">Market Exchange</h2>
+        <h2 class="section-heading text-black"><center>Market Exchange</center></h2>
         <div class="row no-gutters popup-gallery">          
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
