--- a/index.html
+++ b/index.html
@@ -220,16 +220,26 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation. (Do not send Ether from exchange wallet, you have been warned)</p>
+            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation. (Do not send Ether from exchange wallet, you have been warned) or you could simply get CIPHS over the exchange market without exclusive privilege (lower price) as CIPHSter.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">DEX</a>
           </div>
         </div>
       </div>
     </section>
-    
-    <section class="p-0" id="exchange">
-      <div class="container-fluid p-0">
-        <h2 class="section-heading text-black"><center>Market Exchange</center></h2>
+          
+    <section class="bg-black" id="exchange">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+           <h2 class="section-heading text-black">Exchange Market</h2>           
+          </div>
+        </div>
+      </div>
+    </section>    
+  
+    <section class="p-0">
+      <div class="container-fluid p-0">    
         <div class="row no-gutters popup-gallery">          
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
