--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation. (Do not send Ether from exchange wallet, you have been warned) or you could simply get CIPHS over the exchange market without exclusive privilege (lower price) as CIPHSter.</p>
+            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation (do not send Ether from exchange wallet, you have been warned) Or simply buy CIPHS over the major exchange market without exclusive privilege (at market price) as CIPHSter.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">DEX</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">Market Exchange</a>
           </div>
         </div>
       </div>
     </section>
           
-    <section class="bg-black" id="exchange">
+    <section class="bg-dark" id="exchange">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-           <h2 class="section-heading text-black">Exchange Market</h2>           
+          <div class="col-lg-4 mx-auto text-center">
+           <h2 class="section-heading text-black">Market Exchange</h2>           
           </div>
         </div>
       </div>
