--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
       <div class="container-fluid p-0">    
         <div class="row no-gutters popup-gallery">          
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="http://bit.ly/ciphs-eth">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="etherdelta.io">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+              <a href="http://bit.ly/ciphs-eth" title="CIPHS/ETH">
+                <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="etherdelta.io">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -253,6 +254,7 @@
                     CIPHS/ETH
                   </div>
                 </div>
+                </a>
               </div>
             </a>
           </div>
