--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mx-auto text-center">
-           <h2 class="section-heading text-black">Market Exchange</h2>           
+           <h2 class="section-heading text-white">Market Exchange</h2>           
           </div>
         </div>
       </div>
