--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
         <div class="row no-gutters popup-gallery">          
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <a href="http://bit.ly/ciphs-eth" title="CIPHS/ETH">
-                <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="etherdelta.io">
+               <a href="http://bit.ly/ciphs-eth"><img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="etherdelta.io"></a>
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -253,8 +252,7 @@
                   <div class="project-name">
                     CIPHS/ETH
                   </div>
-                </div>
-                </a>
+                </div>                
               </div>
             </a>
           </div>
