--- a/index.html
+++ b/index.html
@@ -232,9 +232,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mx-auto text-center">
-           <h2 class="section-heading text-white">Market Exchange</h2>           
-          </div>
-        </div>
+           <h2 class="section-heading text-white">Market Exchange</h2>
+             <hr class="light my-4">              
+             <a class="btn btn-light btn-xl js-scroll-trigger" href="http://bit.ly/ciphs-eth">EtherDelta</a>   
+           </div>
+         </div>
       </div>
     </section>    
   
