--- a/index.html
+++ b/index.html
@@ -236,15 +236,13 @@
            <h2 class="section-heading text-white">Exchange Market</h2>
             <hr class="light my-4">
              <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
-              <div class="col-lg-4 col-sm-6">
-               <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:auto;></a>
-              </div>
+            <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:auto;></a>           
             </div>
          </div>
       </div>
     </section>    
   
-    <section class="p-0">
+ /*   <section class="p-0">
       <div class="container-fluid p-0">    
         <div class="row no-gutters popup-gallery">          
           <div class="col-lg-4 col-sm-6">
@@ -295,6 +293,7 @@
         </div>
       </div>
     </section>
+     */         
    
     <section id="contact">
       <div class="container">
