--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
            <h2 class="section-heading text-white">Exchange Market</h2>
             <hr class="light my-4">
              <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
-            <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:auto;></a>           
+            <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:auto;"></a>           
             </div>
          </div>
       </div>
