--- a/index.html
+++ b/index.html
@@ -236,65 +236,14 @@
            <h2 class="section-heading text-white">Exchange Market</h2>
             <hr class="light my-4">
              <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
-            <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:350px;height:150px;border:0"></a>           
+            <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io"></a>
+             <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/2.jpg" alt="ddex.io"></a> 
+             <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/3.jpg" alt="hitbtc.com"></a>   
             </div>
          </div>
       </div>
     </section>    
   
- /*   <section class="p-0">
-      <div class="container-fluid p-0">    
-        <div class="row no-gutters popup-gallery">          
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="etherdelta.io">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    EtherDelta
-                     </div>
-                    <div class="project-name">
-                    CIPHS/ETH
-                  </div>
-                </div>                
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="ddex.io">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                   DDEX
-                  </div>
-                  <div class="project-name">
-                    COMING SOON
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="hitbtc.com">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    HitBTC
-                  </div>
-                  <div class="project-name">
-                    COMING SOON
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>                          
-        </div>
-      </div>
-    </section>
-     */         
-   
     <section id="contact">
       <div class="container">
         <div class="row">
