--- a/index.html
+++ b/index.html
@@ -244,6 +244,39 @@
       </div>
     </section>    
   
+<div class="row">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="http://bit.ly/ciphs-eth">
+        <img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:100%">
+        <div class="caption">
+          <p>CIPHS/ETH</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="*">
+        <img src="img/portfolio/fullsize/2.jpg" alt="ddex.io" style="width:100%">
+        <div class="caption">
+          <p>COMING SOON</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="*">
+        <img src="img/portfolio/fullsize/3.jpg" alt="hitbtc.com" style="width:100%">
+        <div class="caption">
+          <p>COMING SOON</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>    
+    
     <section id="contact">
       <div class="container">
         <div class="row">
