--- a/index.html
+++ b/index.html
@@ -235,10 +235,7 @@
           <div class="col-lg-4 mx-auto text-center">
            <h2 class="section-heading text-white">Exchange Market</h2>
             <hr class="light my-4">
-             <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
-            <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io"></a>
-             <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/2.jpg" alt="ddex.io"></a> 
-             <a href="http://bit.ly/ciphs-eth"><img class="img-responsive" src="img/portfolio/fullsize/3.jpg" alt="hitbtc.com"></a>   
+             <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>            
             </div>
          </div>
       </div>
@@ -250,7 +247,7 @@
       <a href="http://bit.ly/ciphs-eth">
         <img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:100%">
         <div class="caption">
-          <p>CIPHS/ETH</p>
+          <p class="text-center" style="bold">CIPHS/ETH</p>
         </div>
       </a>
     </div>
@@ -260,7 +257,7 @@
       <a href="*">
         <img src="img/portfolio/fullsize/2.jpg" alt="ddex.io" style="width:100%">
         <div class="caption">
-          <p>COMING SOON</p>
+          <p class="text-center" style="bold">COMING SOON</p>
         </div>
       </a>
     </div>
@@ -270,7 +267,7 @@
       <a href="*">
         <img src="img/portfolio/fullsize/3.jpg" alt="hitbtc.com" style="width:100%">
         <div class="caption">
-          <p>COMING SOON</p>
+          <p class="text-center" style="bold">COMING SOON</p>
         </div>
       </a>
     </div>
