--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="http://bit.ly/ciphs-eth">
+      <a href="http://bit.ly/ciphs-eth" target="_blank">
         <img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:100%">
         <div class="caption">
           <p class="text-center" style="bold">CIPHS/ETH</p>
@@ -254,7 +254,7 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="*">
+      <a href="*" target="_blank">
         <img src="img/portfolio/fullsize/2.jpg" alt="ddex.io" style="width:100%">
         <div class="caption">
           <p class="text-center" style="bold">COMING SOON</p>
@@ -264,7 +264,7 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="*">
+      <a href="*" target="_blank">
         <img src="img/portfolio/fullsize/3.jpg" alt="hitbtc.com" style="width:100%">
         <div class="caption">
           <p class="text-center" style="bold">COMING SOON</p>
